[package]
name = "wiki"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "wiki"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = "0.0.101"
serde = "1"

[dev-dependencies]
fixt = "0.0.3" # released at same time as hdk 0.0.101
paste = "1.0.5"
holochain_types = "0.0.1" # released at same time as hdk 0.0.101

[features]
mock = ["hdk/mock", "hdk/test_utils"]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"